@@ -1,0 +1,100 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "R. J. Mathar. Refractive index of humid air in the infrared: model fits, <a href=\"https://doi.org/10.1088/1464-4258/9/5/008\"><i>J. Opt. A: Pure Appl. Opt.</i> <b>9</b>, 470-476 (2007)</a><br>[<a href=\"https://github.com/polyanskiy/refractiveindex.info-scripts/blob/master/scripts/Mathar%202007%20-%20Air%204.35-5.2um.py\">Calculation script (Python)</a> - can be used for calculating refractive index of air at a given humidity, temperatire, and pressure"
+COMMENTS: "Dry air at 15 °C, 101.325 kPa, 370 ppm CO<sub>2</sub> content."
+DATA:
+  - type: tabulated n
+    data: |
+        4.35 1.000273011293
+        4.36 1.000272988240
+        4.37 1.000272967424
+        4.38 1.000272948658
+        4.39 1.000272931765
+        4.40 1.000272916582
+        4.41 1.000272902955
+        4.42 1.000272890743
+        4.43 1.000272879814
+        4.44 1.000272870046
+        4.45 1.000272861325
+        4.46 1.000272853547
+        4.47 1.000272846616
+        4.48 1.000272840441
+        4.49 1.000272834942
+        4.50 1.000272830043
+        4.51 1.000272825675
+        4.52 1.000272821776
+        4.53 1.000272818288
+        4.54 1.000272815159
+        4.55 1.000272812343
+        4.56 1.000272809798
+        4.57 1.000272807484
+        4.58 1.000272805367
+        4.59 1.000272803419
+        4.60 1.000272801611
+        4.61 1.000272799920
+        4.62 1.000272798325
+        4.63 1.000272796808
+        4.64 1.000272795355
+        4.65 1.000272793951
+        4.66 1.000272792586
+        4.67 1.000272791251
+        4.68 1.000272789939
+        4.69 1.000272788643
+        4.70 1.000272787361
+        4.71 1.000272786088
+        4.72 1.000272784824
+        4.73 1.000272783566
+        4.74 1.000272782316
+        4.75 1.000272781075
+        4.76 1.000272779843
+        4.77 1.000272778622
+        4.78 1.000272777416
+        4.79 1.000272776226
+        4.80 1.000272775056
+        4.81 1.000272773908
+        4.82 1.000272772786
+        4.83 1.000272771693
+        4.84 1.000272770631
+        4.85 1.000272769604
+        4.86 1.000272768614
+        4.87 1.000272767664
+        4.88 1.000272766754
+        4.89 1.000272765888
+        4.90 1.000272765065
+        4.91 1.000272764287
+        4.92 1.000272763553
+        4.93 1.000272762864
+        4.94 1.000272762217
+        4.95 1.000272761611
+        4.96 1.000272761044
+        4.97 1.000272760512
+        4.98 1.000272760012
+        4.99 1.000272759539
+        5.00 1.000272759087
+        5.01 1.000272758650
+        5.02 1.000272758222
+        5.03 1.000272757794
+        5.04 1.000272757358
+        5.05 1.000272756904
+        5.06 1.000272756422
+        5.07 1.000272755900
+        5.08 1.000272755328
+        5.09 1.000272754690
+        5.10 1.000272753975
+        5.11 1.000272753167
+        5.12 1.000272752250
+        5.13 1.000272751209
+        5.14 1.000272750025
+        5.15 1.000272748680
+        5.16 1.000272747157
+        5.17 1.000272745433
+        5.18 1.000272743490
+        5.19 1.000272741304
+        5.20 1.000272738855
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 15 °C
+    pressure: 101325 Pa
